--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -31,7 +31,7 @@
   margin: 1.414em 0 0;
   padding-bottom: 0.5em;
   font-size: $type-size-5;
-  color: mix(#fff, $gray, 25%);
+  color: mix(#fff, $gray, 15%);
   border-bottom: 1px solid $border-color;
 
   + .list__item .archive__item-title {
@@ -39,9 +39,26 @@
   }
 }
 
+.cv__item-title {
+  position: absolute;
+  text-align: left;
+  float: left;
+  left: 6%;
+  margin-bottom: 0.25em;
+  font-family: $sans-serif-narrow;
+  border-bottom: 1px solid $border-color;
+
+
+  a + a {
+    opacity: 0.5;
+  }
+}
+
 .archive__item-title {
   margin-bottom: 0.25em;
   font-family: $sans-serif-narrow;
+  border-bottom: 1px solid $border-color;
+
 
   a + a {
     opacity: 0.5;
