--- a/_includes/pub_authors.html
+++ b/_includes/pub_authors.html
@@ -1,13 +1,13 @@
 {% for author in pub_authors %}
   {% assign found = site.profiles | where:"pub_name", author | first %}
   {% if found %}
-    <a href="{{ found.url }}"><span itemprop="author">{{ author }}</span></a>{% unless forloop.last %},{% endunless %}
+    <a href="{{ found.url }}"><span itemprop="author">{{ author.given }} {{ author.family }}</span></a>{% unless forloop.last %},{% endunless %}
   {% else %}
     {% assign found = site.profiles | where:"title", author | first %}
     {% if found %}
-      <a href="{{ found.url }}"><span itemprop="author">{{ author }}</span></a>{% unless forloop.last %},{% endunless %}
+      <a href="{{ found.url }}"><span itemprop="author">{{ author.given }} {{ author.family }}</span></a>{% unless forloop.last %},{% endunless %}
     {% else %}
-      <span itemprop="author">{{ author }}</span>{% unless forloop.last %},{% endunless %}
+      <span itemprop="author">{{ author.given }} {{ author.family }}</span>{% unless forloop.last %},{% endunless %}
     {% endif %}
   {% endif %}
 {% endfor %}
