--- a/_includes/pub_list.html
+++ b/_includes/pub_list.html
@@ -2,7 +2,7 @@
 
 <!-- {% assign papertypes = site.publications | map: "type" | sort: "year" | uniq | reverse %} -->
 
-{% assign papertypes = "article-journal,paper-conference,thesis" | split:"," %}
+{% assign papertypes = "manuscript,article-journal,paper-conference,thesis" | split:"," %}
 
 <ol reversed class="list-nostyle" type="1" style="list-style-position: inside;">
 
