--- a/_includes/single_pub.html
+++ b/_includes/single_pub.html
@@ -26,7 +26,7 @@
         {{ pub.source }}
       {% endif %}
     </i>
-  {{ pub.issued[0].year }}.
+  {{ pub.year }}.
   </span>
   <br>
   {% include pub_links.html pub=pub %}
