--- a/_includes/single_pub.html
+++ b/_includes/single_pub.html
@@ -16,8 +16,8 @@
 
   <span class="pub-journal">
     <i>
-      {% if pub.event %}
-        {{ pub.event }}.
+      {% if pub.event-title %}
+        {{ pub.event-title }}.
       {% elsif pub.publisher %}
         {{ pub.publisher }}.
       {% elsif pub.container-title %}
