--- a/_includes/single_cv_item.html
+++ b/_includes/single_cv_item.html
@@ -41,7 +41,7 @@
   <br>
   {% endif %}
   {% if var.institution %}
-  {{ var.institution }}{% if var.amount %} - {{ var.amount }}{% endif %}
+  {{ var.institution }}
   <br>
   {% endif %}
 
